--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://richard-mattinson.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
